# esp32-drive-orbit

./: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  REFACTOR.md  a.out  capacitor.config.json  package-lock.json  package.json  platformio.ini  test.cpp
.certs/: localhost-key.pem  localhost.pem
.github/skills/: pio.md
data/: app.js  index.html  schema.json  styles.css
docs/: README.md
frontend/dashboard/: app.js  index.html  schema.json  styles.css
include/: car_telemetry.h  cyber_theme.h  espnow_transport.h  shared_data.h  telemetry_protocol.h  trip_analytics.h  wifi_config.example.h  wifi_config.h
preview/: README.md  index.html
preview/companion/: styles.css
preview/companion-orb/: README.md  app.js  index.html  styles.css
preview/companion_preview/: app.js  index.html  styles.css
preview/concepts/: 01-ambient-speed.html  01-orbital-arc.html  02-split-horizon.html  03-blackout-dial.html  03-carbon-digital.html  04-typeface-only.html  05-neon-tachometer.html  06-glass-cockpit.html  06-night-rider.html  07-radial-twin.html  08-vertical-stack.html  09-ember-ring.html  09-spectrum-eq.html  10-heads-up-wire.html  index.html  orb-render.html
preview/dashboard-themes/: index.html
preview/dashboard_preview/: app.js  index.html  styles.css
preview/features/: ambient-animations.html  engine-boost.html  fuel-efficiency.html  gforce-shift-light.html  index.html  trip-summary.html  (+1 more)
tools/dashboard_preview_native/: CMakeLists.txt  README.md
tools/dashboard_preview_native/include/: Arduino.h
tools/dashboard_preview_native/src/: main.mm
(+110 files in other folders)
